@@ -67,11 +67,11 @@
 
 #define ITK_MAJOR_VERSION	4
 #define ITK_MINOR_VERSION	0
-#define ITK_RELEASE_LEVEL	TCL_BETA_RELEASE
-#define ITK_RELEASE_SERIAL	6
+#define ITK_RELEASE_LEVEL	TCL_RELEASE
+#define ITK_RELEASE_SERIAL	0
 
 #define ITK_VERSION		"4.0"
-#define ITK_PATCH_LEVEL		"4.0b6"
+#define ITK_PATCH_LEVEL		"4.0.0"
 
 
 /*
